# SJTUClaw

./: .env.example  .gitignore  CODE_WIKI.md  README.md  SJTUClaw.md  check.txt  pyproject.toml  requirements.txt  中期报告.md
SJTUClaw/: .gitignore  README.md  requirements.txt
claw/: __init__.py  config.py  desktop.py  main.py  paths.py  runtime_settings.py  utils.py
claw_evaluation_workspace/: README.txt
claw_evaluation_workspace_round2/: HEARTBEAT.md
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  Desktop Pet.md  QA_CHECKLIST.md  Skill System.md  Workspace.md  configuration.md  testing.md  windows-packaging.md  中期报告.md
evaluation/: Claw第二轮高难度验收任务设计.md  Claw验收任务设计.md  SJTUClaw第二轮验收报告.md  SJTUClaw验收报告.md  claw_acceptance_results.json  claw_acceptance_round2_results.json  run_claw_acceptance.py  run_claw_acceptance_round2.py
prompts/: identity.md  platform_policy.md  soul.md  system_prompt.md  tool_contract.md
spec/: compaction-optimization.md  hierarchical-memory.md
tests/: test_agent_tool_reply.py  test_auto_title.py  test_bundled_pet_assets.py  test_cancel_turn.py  test_cli_rollback_integration.py  test_compaction.py  test_core.py  test_cron_integration.py  test_default_main_dir.py  test_encoding.py  test_explicit_skill_entrypoints.py  test_gateway_fixes.py  test_gateway_rollback.py  test_paths.py  test_pet.py  test_pet_command.py  test_pet_replies.py  test_pi_integration.py  test_pi_real_prompt.py  test_prompt_templates.py  test_qq_media_and_web_images.py  test_reflection.py  test_runner.py  test_runtime_settings.py  test_security_hardening.py  (+8 more)
(+496 files in other folders)
